--- a/src/css/style.css
+++ b/src/css/style.css
@@ -292,7 +292,7 @@ main {
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
 }
-.description span{
+.description a{
   text-decoration: none;
   font-size: 16px;
   font-weight: bold;
@@ -301,7 +301,7 @@ main {
   cursor: pointer;
 }
 
-.description span:hover {
+.description a:hover {
   text-decoration: underline;
   text-decoration-color: #551b7a;
 }
