--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,83 +1,97 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 @keyframes wave-animation {
   0% {
     transform: rotate(0deg);
   }
+
   10% {
     transform: rotate(14deg);
   }
+
   20% {
     transform: rotate(-8deg);
   }
+
   30% {
     transform: rotate(14deg);
   }
+
   40% {
     transform: rotate(-4deg);
   }
+
   50% {
     transform: rotate(10deg);
   }
+
   60% {
     transform: rotate(0deg);
-  } 
+  }
+
   100% {
     transform: rotate(0deg);
   }
 }
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Montserrat", sans-serif;
-    scroll-behavior: smooth;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+  scroll-behavior: smooth;
 }
 
 *::-webkit-scrollbar {
   width: 5px;
 }
+
 *::-webkit-scrollbar-track {
   background-image: linear-gradient(to bottom, #19181d, #24153c);
 }
+
 *::-webkit-scrollbar-thumb {
   background-color: #551b7a;
   border-radius: 20px;
 }
+
 body {
-    background-image: linear-gradient(to left bottom, rgba(16, 15, 15, 0.68), 
-    rgba(12, 10, 22, 0.863)), url('../assets/imagens/home-bg.jpg');
-    background-position-x: 50%, 50%;
-    background-position-y: 0%, 0%;
-    background-repeat: no-repeat, no-repeat;
-    background-size: cover;
+  background-image: linear-gradient(to left bottom, rgba(16, 15, 15, 0.68),
+      rgba(12, 10, 22, 0.863)), url('../assets/imagens/home-bg.jpg');
+  background-position-x: 50%, 50%;
+  background-position-y: 0%, 0%;
+  background-repeat: no-repeat, no-repeat;
+  background-size: cover;
 }
 
 header nav ul {
-    display: flex;
-    justify-content: center; 
-    list-style-type: none;
-    
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+
 }
-header  nav ul li {
-    cursor: pointer;
-    padding: 20px ;
+
+header nav ul li {
+  cursor: pointer;
+  padding: 20px;
 }
-header  nav ul li a {
+
+header nav ul li a {
   font-size: 1.3em;
   color: white;
   text-decoration: none;
   text-align: center;
-  
+
 }
-header  nav ul li a:hover {
-  border-bottom:  #A410E3 2px solid;
+
+header nav ul li a:hover {
+  border-bottom: #A410E3 2px solid;
 }
+
 #menu-hamburguer {
   display: none;
 }
+
 main {
   display: flex;
   justify-content: space-evenly;
@@ -94,7 +108,8 @@ main {
   color: white;
 }
 
-.text-main h1, h2 {
+.text-main h1,
+h2 {
   font-size: 2.4em;
 }
 
@@ -112,7 +127,7 @@ main {
   align-items: end;
   position: relative;
   top: 200px;
-    
+
 }
 
 .media-main i {
@@ -128,13 +143,13 @@ main {
 
 .wave {
   animation-name: wave-animation;
-  animation-duration: 2.1s; 
-  animation-iteration-count: infinite; 
+  animation-duration: 2.1s;
+  animation-iteration-count: infinite;
   transform-origin: 70% 70%;
   display: inline-block;
 }
-  
-.main-img img{
+
+.main-img img {
   position: relative;
   left: 50px;
   width: 485px;
@@ -148,18 +163,24 @@ main {
   justify-content: center;
   align-items: center;
 }
-.about h1, .hab h1, .projt h1, .cont h1{
+
+.about h1,
+.hab h1,
+.projt h1,
+.cont h1 {
   font-size: 2.4em;
   color: white;
   text-align: center;
   margin: 24px 0px;
 }
-.about-info{
+
+.about-info {
   display: flex;
   height: 100%;
   align-items: self-start;
   margin-top: 70px;
 }
+
 .about img {
   width: 485px;
 }
@@ -169,9 +190,11 @@ main {
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;;
+  border-bottom-right-radius: 4px;
+  ;
   width: 50%;
 }
+
 .about-info p {
   color: rgba(255, 255, 255, 0.685);
   width: 700px;
@@ -198,29 +221,33 @@ main {
   text-align: justify;
   width: 485px;
 }
+
 .hab i {
   font-size: 5em;
   color: #A410E3;
 }
+
 .icon-hab {
   width: 700px;
 
 }
+
 .card-hab {
   display: inline-flex;
   justify-content: center;
   align-items: center;
   margin: 15px;
   height: 130px;
-  width: 190px; 
+  width: 190px;
   border: 1px solid hsla(282, 87%, 48%, 0.425);
   box-shadow: rgba(89, 4, 168, 0.137) 4px 5px 4px 3px;
   transition: .3s;
 }
+
 .card-hab:hover {
   transform: scale(1.1);
   border: 2px solid #A410E3;
-  
+
 }
 
 .projt {
@@ -230,6 +257,7 @@ main {
   height: 100vh;
 
 }
+
 .projt h1 {
   margin-top: 0px;
 }
@@ -243,15 +271,16 @@ main {
   height: 100%;
   width: 92%;
   margin-top: 10px;
-  
+
 }
+
 .info-card {
   text-align: center;
   position: relative;
   bottom: 100px;
 }
 
-.info-card h1{
+.info-card h1 {
   font-size: 1.4em;
   font-weight: 600;
   margin-bottom: 0px;
@@ -277,6 +306,7 @@ main {
   height: 148px;
   transition: 0.3s;
 }
+
 .cards:hover {
   transform: scale(1.1);
 }
@@ -292,7 +322,8 @@ main {
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
 }
-.description a{
+
+.description a {
   text-decoration: none;
   font-size: 16px;
   font-weight: bold;
@@ -349,6 +380,7 @@ main {
   color: #ffffff80;
   width: 80%;
 }
+
 .info-pro ul {
   width: 76%;
 }
@@ -357,10 +389,11 @@ main {
   font-size: 16px;
   color: #ffffff80;
 }
+
 .links {
   display: flex;
   justify-content: space-evenly;
-  
+
 }
 
 .links .btn {
@@ -372,17 +405,19 @@ main {
   transition: 0.3s;
   cursor: pointer;
 }
+
 .links .btn:hover {
   background-color: #A410E3;
   transform: scale(1.2);
 }
+
 .links .btn a {
   color: #fff;
   text-decoration: none;
 }
 
 
-.cont{
+.cont {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -395,7 +430,7 @@ main {
   justify-content: space-evenly;
   height: 100%;
   width: 100%;
- 
+
 }
 
 .card-cont {
@@ -455,8 +490,8 @@ main {
   transition: all 1s;
 }
 
-
-
-
-
-
+#particles-js {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
