--- a/src/css/style.css
+++ b/src/css/style.css
@@ -212,7 +212,8 @@ h2 {
 .hab-info {
   display: flex;
   height: 100%;
-  align-items: self-start;
+  align-items: flex-start;
+  gap: 20px;
   margin-top: 70px;
 }
 
@@ -220,6 +221,7 @@ h2 {
   color: rgba(255, 255, 255, 0.685);
   text-align: justify;
   width: 485px;
+  margin-top: 14px;
 }
 
 .hab i {
@@ -254,8 +256,7 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
-
+  height: auto;
 }
 
 .projt h1 {
@@ -263,15 +264,13 @@ h2 {
 }
 
 .card-projt {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  grid-template-rows: auto auto auto;
-  justify-content: space-around;
-  row-gap: 60px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 55px;
   height: 100%;
   width: 92%;
-  margin-top: 10px;
-
+  margin-top: 40px;
 }
 
 .info-card {
